[gd_scene load_steps=2 format=3 uid="uid://dojmx0jr7in00"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_y00vl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y00vl")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameCode" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
placeholder_text = "Enter Code"
alignment = 1
max_length = 6
clear_button_enabled = true
caret_blink = true

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 35
text = "Start Game"

[node name="Codelabel" type="Label" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Code Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
